# botsquad

./: .gitignore  LICENSE  README.md  pyproject.toml
botsquad/: bot_engine.py  main.py  models.py
botsquad/api/: routes.py
