[project]
name = "botsquad"
version = "0.1.0"
description = "BotSquad Group Chat"
authors = [
    {name = "Dowson Chen"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "openai (>=1.93.3,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gradio (>=5.35.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"